--- a/people/liane.yaml
+++ b/people/liane.yaml
@@ -1,4 +1,4 @@
 name: "Liane"
 entities:
 - device_tracker.androidc925b2268e5ea365homewhalebarncom
-- device_tracker.workpchomewhalebarncom
+- device_tracker.liane_work_pc
