--- a/people/ros.yaml
+++ b/people/ros.yaml
@@ -2,4 +2,5 @@ name: "Ros"
 entities:
 - device_tracker.ros_phone
 - device_tracker.rosiphone
+- device_tracker.rossipad
 - device_tracker.ccc564630
