--- a/people/mark.yaml
+++ b/people/mark.yaml
@@ -1,6 +1,6 @@
 name: "Mark"
 entities:
 - device_tracker.mark_phone
+- device_tracker.mark_android
 - device_tracker.omenmotog
 - device_tracker.shochu
-- device_tracker.android42cfe66a93652814homewhalebarncom
