--- a/configuration.yaml
+++ b/configuration.yaml
@@ -357,7 +357,26 @@ group:
     - group.network
     - group.temperatures
     - group.thermostats
+    - group.batteries
 
+
+  batteries:
+    entities:
+    - sensor.main_heating_thermostat_battery
+    - sensor.annex_heating_thermostat_battery
+    - sensor.hall_multisensor_battery
+    - sensor.hall_west_battery
+    - sensor.study_east_battery
+    - sensor.study_west_battery
+    - sensor.hall_east_battery
+    - sensor.library_battery
+    - sensor.bedroom_mark_battery
+    - sensor.lounge_east_battery
+    - sensor.ballroom_east_battery
+    - sensor.kitchen_battery
+    - sensor.annex_hall_battery
+    name: Battery Levels
+    view: false
 
   thermostats:
     entities:
